# napalm

./: .gitignore  CMakeLists.txt  Licence.txt  modular_player.sln  napalm.sln
OggDecoder/: Module.cpp  OggDecoder.cpp  OggDecoder.h  OggDecoder.vcxproj  OggDecoder.vcxproj.filters  OggMetadata.cpp  OggMetadata.h  main.cpp
WasapiOutput/: WasapiOutput.cpp  WasapiOutput.vcxproj  WasapiOutput.vcxproj.filters  main.cpp
common/: audio_format.h  decoder.hpp  decoder_module.h  output_module.h  sha256.h  utf8.cpp  utf8.hpp
cs-napalm/: Form1.Designer.cs  Form1.cs  Player.cs  Program.cs  Utility.cs  cs-napalm.csproj
cs-napalm/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
dependencies/projects/libogg/: libogg.vcxproj  libogg.vcxproj.filters
dependencies/projects/libsamplerate/: libsamplerate.vcxproj  libsamplerate.vcxproj.filters
dependencies/projects/libvorbis/: libvorbis.vcxproj  libvorbis.vcxproj.filters
dependencies/projects/libvorbisfile/: libvorbisfile.vcxproj  libvorbisfile.vcxproj.filters
dependencies/projects/pdcurses/: pdcurses.vcxproj  pdcurses.vcxproj.filters
dependencies/sources/flac-1.3.2/src/libFLAC++/: metadata.cpp
dependencies/sources/libcue-2.2.1/include/: libcue.h
dependencies/sources/libcue-2.2.1/src/: cue_parser.c  cue_parser.h  cue_scanner.c
dependencies/sources/libogg-1.3.3/src/: framing.c
dependencies/sources/mpg123-1.25.11/: configure  mpg123.spec
mingw-std-threads/: mingw.mutex.h  mingw.thread.h
misc/conversion_generator/: conversion_generator.vcxproj  main.cpp
modular_player/: AudioBuffer.cpp  AudioBuffer.h  BufferSource.h  ChannelMixerFilter.cpp  Decoder.cpp  Decoder.h  Filter.cpp  Filter.h  InputStream.cpp  InputStream.h  Module.cpp  Module.h  Player.cpp  Player.h  ResamplingFilter.cpp  SampleConverterFilter.cpp  main.cpp  modular_player.vcxproj  modular_player.vcxproj.filters  utility.cpp  utility.h
msvc/FileOutput/: FileOutput.vcxproj  FileOutput.vcxproj.filters
msvc/FlacDecoder/: FlacDecoder.vcxproj  FlacDecoder.vcxproj.filters
msvc/Mp3Decoder/: Mp3Decoder.vcxproj  Mp3Decoder.vcxproj.filters
msvc/NullOutput/: NullOutput.vcxproj  NullOutput.vcxproj.filters
msvc/OggDecoder/: OggDecoder.vcxproj  OggDecoder.vcxproj.filters
msvc/PortAudio/: portaudio.vcproj  portaudio.vcxproj  portaudio.vcxproj.filters
msvc/PortAudioOutput/: PortAudioOutput.vcxproj  PortAudioOutput.vcxproj.filters
msvc/WasapiOutput/: WasapiOutput.vcxproj  WasapiOutput.vcxproj.filters
msvc/conversion_generator/: conversion_generator.vcxproj  conversion_generator.vcxproj.filters
msvc/cs-napalm/: BasicTrackInfo.cs  Form1.Designer.cs  Form1.cs  FullTrackMetadata.cs  ILevelSource.cs  LevelMeter.Designer.cs  LevelMeter.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindowPlayerEvents.cs  MainWindowUserEvents.cs  Player.cs  PreferencesDialog.Designer.cs  PreferencesDialog.cs  Program.cs  Rational.cs  Utility.cs  cs-napalm.csproj
msvc/cs-napalm.a/: cs-napalm.csproj
msvc/cs-napalm/Properties/: Resources.resx
msvc/dependencies/libcue/: libcue.vcxproj  libcue.vcxproj.filters
msvc/dependencies/libflac/: libflac.vcxproj  libflac.vcxproj.filters
msvc/dependencies/libflac++/: libflac++.vcxproj  libflac++.vcxproj.filters
msvc/dependencies/libmpg123/: libmpg123.vcxproj  libmpg123.vcxproj.filters
msvc/dependencies/libogg/: libogg.vcxproj  libogg.vcxproj.filters
msvc/dependencies/libsamplerate/: libsamplerate.vcxproj  libsamplerate.vcxproj.filters
msvc/dependencies/libvorbis/: libvorbis.vcxproj  libvorbis.vcxproj.filters
msvc/dependencies/libvorbisfile/: libvorbisfile.vcxproj  libvorbisfile.vcxproj.filters
msvc/dependencies/pdcurses/: pdcurses.vcxproj  pdcurses.vcxproj.filters
msvc/napalm/: napalm.vcxproj  napalm.vcxproj.filters
msvc/t-napalm/: t-napalm.vcxproj  t-napalm.vcxproj.filters
msvc/tui-napalm/: tui-napalm.vcxproj  tui-napalm.vcxproj.filters
napalm/: AudioQueue.cpp  AudioQueue.h  BufferSource.h  Decoder.cpp  Decoder.h  Filter.cpp  Filter.h  InputStream.cpp  InputStream.h  Module.cpp  Module.h  Player.cpp  Player.h  Playlist.h  ResamplingFilter.cpp  SampleConverterFilter.cpp  Threads.cpp  Threads.h  main.cpp  napalm.vcxproj  napalm.vcxproj.filters  utility.cpp  utility.h
src/common/: GenericMetadata.hpp  RationalValue.h  WrappedExternalIO.hpp  audio_format.h  base64.cpp  base64.hpp  decoder.hpp  decoder_module.h  external_io.h  metadata_module.h  module.h  output.hpp  output_module.h  sha256.hpp  thread_compat.hpp  utf8.hpp
src/interfaces/cs-napalm/: Player.cs
src/interfaces/cs-napalm/Properties/: Resources.resx  Settings.Designer.cs
src/interfaces/t-napalm/: main.cpp
src/interfaces/tui-napalm/: main.cpp
src/misc/conversion_generator/: main.cpp
src/napalm/: AudioQueue.cpp  AudioQueue.h  BasicTrackInfo.h  BufferSource.h  ChannelMixerFilter.cpp  CircularQueue.h  Decoder.cpp  Decoder.h  Filter.cpp  Filter.h  InputStream.cpp  InputStream.h  LevelQueue.cpp  LevelQueue.h  Metadata.cpp  Metadata.h  MetadataModule.cpp  MetadataModule.h  OutputDeviceList.h  OutputModule.cpp  OutputModule.h  Player.cpp  Player.h  Playlist.cpp  Playlist.h  ResamplingFilter.cpp  SampleConverterFilter.cpp  Threads.cpp  Threads.h  converters.inl  main.cpp  utility.cpp  utility.h
src/plugins/FileOutput/: FileOutput.cpp  FileOutput.h  main.cpp
src/plugins/FlacDecoder/: AbstractFlacDecoder.h  CircularBuffer.cpp  CircularBuffer.h  FlacDecoder.cpp  FlacDecoder.h  Module.h  OggFlacDecoder.cpp  OggFlacDecoder.h  main.cpp
src/plugins/Mp3Decoder/: Module.cpp  Module.h  Mp3Decoder.cpp  Mp3Decoder.h  main.cpp
src/plugins/NullOutput/: NullOutput.cpp  NullOutput.h  main.cpp
src/plugins/OggDecoder/: Module.h  OggDecoder.cpp  OggDecoder.h  OggMetadata.cpp  OggMetadata.h  main.cpp
src/plugins/OggMetadata/: OggMetadata.cpp  OggMetadata.h  oggmetadataexportfunctions.inl
src/plugins/PortAudioOutput/: PortAudioOutput.cpp  PortAudioOutput.h  main.cpp
src/plugins/WasapiOutput/: WasapiOutput.cpp  WasapiOutput.h  main.cpp
t-napalm/: main.cpp  t-napalm.vcxproj
tui-napalm/: main.cpp  tui-napalm.vcxproj  tui-napalm.vcxproj.filters
(+17 files in other folders)
